fixing issue where cant click ticket link on mobile

--- a/src/scss/hero.scss
+++ b/src/scss/hero.scss
@@ -17,6 +17,7 @@
     position: relative;
     height: auto;
     padding-bottom: 22px;
+    z-index: 0;
   }
 }
 
